--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "particle-io": "^0.12.0",
     "socket.io": "^1.4.5"
   },
+ "engine": "node = 0.12.2",
   "author": "Doug Johnston",
   "license": "BSD-2-Clause",
   "bugs": {
