--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "node": "v0.12.2"
   },
   "scripts": {
-    "postinstall": "grunt uglify",
+    "postinstall": "grunt",
     "start": "node server.js"
   },
   "author": "Doug Johnston",
