--- a/package.json
+++ b/package.json
@@ -12,30 +12,31 @@
   },
   "devDependencies": {
     "bower": "latest",
+    "express": "^4.13.4",
     "grunt": "latest",
-    "grunt-contrib-sass": "latest",
-    "grunt-contrib-watch": "latest",
     "grunt-contrib-connect": "latest",
+    "grunt-contrib-sass": "latest",
     "grunt-contrib-uglify": "latest",
+    "grunt-contrib-watch": "latest",
+    "grunt-express-server": "^0.5.3",
     "grunt-karma": "latest",
+    "jasmine-core": "latest",
+    "johnny-five": "^0.9.44",
     "karma": "latest",
-    "karma-script-launcher": "latest",
-    "karma-firefox-launcher": "latest",
     "karma-chrome-launcher": "latest",
+    "karma-firefox-launcher": "latest",
     "karma-html2js-preprocessor": "latest",
     "karma-jasmine": "latest",
-    "karma-requirejs": "latest",
     "karma-phantomjs-launcher": "~0.2",
+    "karma-requirejs": "latest",
+    "karma-script-launcher": "latest",
     "karma-spec-reporter": "latest",
-    "jasmine-core": "latest",
-    "express": "^4.13.4",
+    "particle-io": "^0.12.0",
     "phantomjs-prebuilt": "latest",
     "requirejs": "latest",
-     "johnny-five": "^0.9.44",
-    "particle-io": "^0.12.0",
     "socket.io": "^1.4.5"
   },
- "engines": {
+  "engines": {
     "node": "v0.12.2"
   },
   "author": "Doug Johnston",
