--- a/package.json
+++ b/package.json
@@ -39,6 +39,10 @@
   "engines": {
     "node": "v0.12.2"
   },
+  "scripts": {
+    "postinstall": "grunt",
+    "start": "node server.js"
+  },
   "author": "Doug Johnston",
   "license": "BSD-2-Clause",
   "bugs": {
