--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "node": "v0.12.2"
   },
   "scripts": {
-    "postinstall": "grunt",
+    "postinstall": "grunt connect",
     "start": "node server.js"
   },
   "author": "Doug Johnston",
