Add bower install and source to package json and Procfile

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "node": "v0.12.2"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "postinstall": "bower install public/assets && source .particlerc"
   }
 }
