--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "^1.13.3",
     "bower": "latest",
+    "particle-cli": "1.12.0",
     "express": "^4.13.4",
     "grunt": "latest",
     "grunt-contrib-connect": "latest",
