Remove post install script

--- a/package.json
+++ b/package.json
@@ -43,6 +43,6 @@
   },
   "scripts": {
     "start": "node server.js",
-    "postinstall": "bower install ./public/assets"
+    "postinstall": ""
   }
 }
